--- a/hweather.cabal
+++ b/hweather.cabal
@@ -54,8 +54,10 @@ executable hweather
   main-is:             Main.hs
   
   -- Modules included in this executable, other than Main.
-  -- other-modules:       
-  
+  other-modules:       Format,
+                       WeatherFetch,
+                       WeatherParse
+
   -- LANGUAGE extensions used by modules in this package.
   other-extensions:    OverloadedStrings
   
